--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/socialite": "^5.24",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
+        "saade/filament-autograph": "^3.2",
         "saade/filament-fullcalendar": "^3.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/browsershot": "^5.2"
