--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,19 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "efipay/sdk-php-apis-efi": "^1.17",
         "filament/filament": "^3.3",
+        "filament/spatie-laravel-media-library-plugin": "^3.3",
         "gerencianet/gerencianet-sdk-php": "^5.1",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.24",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
+        "owen-it/laravel-auditing": "^14.0",
         "saade/filament-autograph": "^3.2",
         "saade/filament-fullcalendar": "^3.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "spatie/browsershot": "^5.2"
+        "spatie/browsershot": "^5.2",
+        "spatie/laravel-backup": "^9.3",
+        "spatie/laravel-medialibrary": "^11.17"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
