--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,7 @@ GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI="${APP_URL}/google/callback"
 
 VITE_APP_NAME="${APP_NAME}"
+
+# OpenAI (optional)
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
