--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "postcss": "^8.4.14",
         "puppeteer": "^24.36.0",
         "tailwindcss": "^3.1.0",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "vite-plugin-pwa": "^1.2.0"
     }
 }
