--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,15 @@
         "laravel/socialite": "^5.24",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
+        "masbug/flysystem-google-drive-ext": "^2.4",
         "owen-it/laravel-auditing": "^14.0",
         "saade/filament-autograph": "^3.2",
         "saade/filament-fullcalendar": "^3.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/browsershot": "^5.2",
         "spatie/laravel-backup": "^9.3",
-        "spatie/laravel-medialibrary": "^11.17"
+        "spatie/laravel-medialibrary": "^11.17",
+        "spatie/laravel-pdf": "^1.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
