--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "owen-it/laravel-auditing": "^14.0",
         "saade/filament-autograph": "^3.2",
         "saade/filament-fullcalendar": "^3.0",
+        "sabre/vobject": "^4.5",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/browsershot": "^5.2",
         "spatie/laravel-backup": "^9.3",
