🔒 Correções críticas de segurança e preparação para produção
✅ CRÍTICO RESOLVIDO:
- Substituído env() por config() nos Services/Seeders (evita null com config:cache)
- Removido public/hot e arquivos de teste/debug do Git
- Atualizado .gitignore com patterns de segurança
- Removido InventarioObserver e método arquivos() de modelo inexistente

🔐 SEGURANÇA:
- php.ini: display_errors=Off, expose_php=Off, log_errors=On
- config/session.php: secure cookie habilitado em produção
- config/browsershot.php: removido --disable-web-security
- Criado config/pix.php para futuras implementações

🐳 DOCKER:
- Criado compose.prod.yaml com:
  * Xdebug desabilitado
  * Porta Vite 5173 removida
  * Redis não exposto ao host
  * restart: unless-stopped
  * Health checks para Laravel e Redis

🧹 LIMPEZA:
- Removidos 7 console.log de debug do widget clima
- Arquivos deletados: public/hot, test-*.html, debug-widget.html, backup_20260201.sql, storage/serve.pid

📝 DOCUMENTAÇÃO:
- Criado docs/DEPLOY_PRODUCTION_CHECKLIST.md com guia completo

Ver docs/DEPLOY_PRODUCTION_CHECKLIST.md para próximos passos obrigatórios.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,24 @@
 
 # Ignore scripts containing credentials
 /scripts/
+
+# SQL backups
+*.sql
+backup_*.sql
+
+# Local test config
+phpunit.xml
+
+# Vite HMR file
+public/hot
+
+# Debug and test files
+public/debug-*.html
+public/test-*.html
+
+# Credentials
+DEV_CREDENTIALS.md
+
+# Local artifacts
+storage/serve.pid
+storage/*.pid
