--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,22 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+# ============================================
+# STOFGARD - Variáveis de Ambiente
+# ============================================
+# Copie este arquivo para .env e configure
+# Documentação: docs/ARQUITETURA.md
+# ============================================
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+# --------------------------------------------
+# APLICAÇÃO BÁSICA
+# --------------------------------------------
+APP_NAME="STOFGARD"           # Nome exibido no sistema
+APP_ENV=local                 # local | production | staging
+APP_KEY=                      # Gere com: php artisan key:generate
+APP_DEBUG=true                # false em produção
+APP_URL=http://localhost:8000 # URL completa do sistema
+
+APP_LOCALE=pt_BR
+APP_FALLBACK_LOCALE=pt_BR
+APP_FAKER_LOCALE=pt_BR
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -15,60 +25,121 @@ APP_MAINTENANCE_DRIVER=file
 
 BCRYPT_ROUNDS=12
 
+# --------------------------------------------
+# LOGS
+# --------------------------------------------
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_LEVEL=debug               # debug | info | warning | error (production: warning)
 
+# --------------------------------------------
+# BANCO DE DADOS
+# --------------------------------------------
+# SQLite (desenvolvimento local)
 DB_CONNECTION=sqlite
+# DB_DATABASE=/caminho/absoluto/database.sqlite
+
+# MySQL (produção)
+# DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
+# DB_DATABASE=stofgard
 # DB_USERNAME=root
 # DB_PASSWORD=
 
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
+# --------------------------------------------
+# SESSÃO E CACHE
+# --------------------------------------------
+SESSION_DRIVER=database       # file | database | redis
+SESSION_LIFETIME=120          # Minutos
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=database     # sync | database | redis
 
-CACHE_STORE=database
+CACHE_STORE=database          # file | database | redis
 # CACHE_PREFIX=
 
-MEMCACHED_HOST=127.0.0.1
-
+# --------------------------------------------
+# REDIS (se usar)
+# --------------------------------------------
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
+# --------------------------------------------
+# EMAIL
+# --------------------------------------------
+MAIL_MAILER=log               # log | smtp | mailgun | ses
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="contato@stofgard.com.br"
 MAIL_FROM_NAME="${APP_NAME}"
 
+# --------------------------------------------
+# AWS S3 (Backup externo)
+# --------------------------------------------
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-# Google Calendar Integration
+# --------------------------------------------
+# GOOGLE CALENDAR
+# --------------------------------------------
+# Obtenha em: https://console.cloud.google.com
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI="${APP_URL}/google/callback"
+GOOGLE_CALENDAR_ID=primary    # ID do calendário ou 'primary'
 
+# --------------------------------------------
+# INTEGRAÇÃO PIX (EFI/Gerencianet)
+# --------------------------------------------
+# Obtenha em: https://gerencianet.com.br
+EFI_CLIENT_ID=
+EFI_CLIENT_SECRET=
+EFI_SANDBOX=true              # false em produção
+EFI_PIX_KEY=                  # Sua chave PIX cadastrada
+EFI_CERTIFICATE_PATH=         # /path/to/certificado.pem
+
+# --------------------------------------------
+# CLIMA (OpenWeatherMap)
+# --------------------------------------------
+# Obtenha em: https://openweathermap.org/api
+WEATHER_API_KEY=
+WEATHER_CITY_ID=3451190       # 3451190 = Ribeirão Preto
+WEATHER_UNITS=metric          # metric | imperial
+WEATHER_LANG=pt_br
+
+# --------------------------------------------
+# GERAÇÃO DE PDF (Browsershot/Puppeteer)
+# --------------------------------------------
+CHROME_PATH=/usr/bin/chromium
+NODE_PATH=/usr/bin/node
+NPM_PATH=/usr/bin/npm
+
+# --------------------------------------------
+# BACKUP
+# --------------------------------------------
+BACKUP_DISK=google            # local | s3 | google
+BACKUP_NOTIFICATION_MAIL=     # Email para notificações de backup
+BACKUP_ARCHIVE_PASSWORD=      # Senha para encriptar backup (opcional)
+
+# --------------------------------------------
+# OUTROS
+# --------------------------------------------
 VITE_APP_NAME="${APP_NAME}"
 
-# OpenAI (optional)
+# OpenAI (opcional - para recursos de IA)
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
