--- a/php.ini
+++ b/php.ini
@@ -3,3 +3,10 @@ upload_max_filesize = 100M
 post_max_size = 100M
 memory_limit = 512M
 max_execution_time = 600
+
+; Security settings for production
+display_errors = Off
+display_startup_errors = Off
+log_errors = On
+error_log = /var/log/php_errors.log
+expose_php = Off
