refactor: Iron Code - Eliminação de anti-patterns e fortalecimento de auditoria
CORREÇÕES CRÍTICAS:
- ❌ Removido auth()->id() ?? 1 (violação de auditoria)
- ✅ Validação obrigatória de userId ou exception
- ✅ Criados 7 Enums PHP 8.2+ (OrcamentoStatus, FinanceiroStatus, etc.)
- ✅ Separação de responsabilidades (PdfGeneratorService, EstoqueService)
- ✅ Externalização de hardcoded paths para .env
- ✅ Parametrização de regras de negócio (prazos, agendamentos)

BREAKING CHANGES:
- aprovarOrcamento() agora exige userId via parâmetro em CLI/Jobs
- Magic strings substituídas por Enums tipados

NOVOS SERVIÇOS:
- PdfGeneratorService: Geração isolada de PDFs (Spatie Laravel PDF)
- EstoqueService: Gestão completa de movimentações

DOCUMENTAÇÃO:
- docs/IRON_CODE_REFACTORING.md: Análise técnica completa
- docs/RESUMO_REFACTORING.md: Guia de deploy e migração

Refs: #security #audit #refactoring #php82

--- a/.env.example
+++ b/.env.example
@@ -124,9 +124,11 @@ WEATHER_LANG=pt_br
 # --------------------------------------------
 # GERAÇÃO DE PDF (Browsershot/Puppeteer)
 # --------------------------------------------
-CHROME_PATH=/usr/bin/chromium
-NODE_PATH=/usr/bin/node
-NPM_PATH=/usr/bin/npm
+# Caminhos dos binários (ajustar conforme ambiente)
+BROWSERSHOT_CHROME_PATH=/home/sail/.cache/puppeteer/chrome/linux-144.0.7559.96/chrome-linux64/chrome
+BROWSERSHOT_NODE_PATH=/usr/bin/node
+BROWSERSHOT_NPM_PATH=/usr/bin/npm
+BROWSERSHOT_TIMEOUT=60        # Timeout em segundos para renderização de PDF
 
 # --------------------------------------------
 # BACKUP
