--- a/deploy/php.ini
+++ b/deploy/php.ini
@@ -8,7 +8,7 @@ max_execution_time = 300
 [opcache]
 opcache.enable=1
 opcache.revalidate_freq=0
-opcache.validate_timestamps=0 # Enable this for dev, disable for prod (0)
+opcache.validate_timestamps=0 ; Enable this for dev, disable for prod (0)
 opcache.max_accelerated_files=10000
 opcache.memory_consumption=192
 opcache.max_wasted_percentage=10
