--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -43,6 +43,9 @@ RUN apt-get update && apt-get install -y \
 # Install PHP extensions
 RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd intl zip
 
+# Install Redis extension
+RUN pecl install redis && docker-php-ext-enable redis
+
 # Get latest Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
@@ -52,6 +55,8 @@ RUN apt-get install -y nodejs
 
 # Create system user to run Composer and Artisan Commands
 RUN useradd -G www-data,root -u $uid -d /home/$user $user
+# Add www-data to the www group so PHP-FPM can write to files owned by www
+RUN usermod -aG $user www-data
 RUN mkdir -p /home/$user/.composer && \
     chown -R $user:$user /home/$user
 
