fix(deploy): fix pdf configuration, force https and fix vite asset loading

--- a/.env.prod
+++ b/.env.prod
@@ -56,3 +56,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Browsershot/Puppeteer Configuration (for PDF generation)
+BROWSERSHOT_CHROME_PATH=/usr/bin/chromium
+BROWSERSHOT_NODE_PATH=/usr/bin/node
+BROWSERSHOT_NPM_PATH=/usr/bin/npm
+
