fix(pdf): unify php-fpm user to 'www' and set system-wide TMPDIR

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,6 +11,9 @@ services:
       - ./:/var/www
     networks:
       - stofgard-network
+    environment:
+      - TMPDIR=/var/www/storage/app/temp
+      - NODE_PATH=/var/www/node_modules
     depends_on:
       - mysql
       - redis
