--- a/.env.prod
+++ b/.env.prod
@@ -62,3 +62,7 @@ BROWSERSHOT_CHROME_PATH=/usr/bin/chromium
 BROWSERSHOT_NODE_PATH=/usr/bin/node
 BROWSERSHOT_NPM_PATH=/usr/bin/npm
 
+# OpenWeather API Configuration
+OPENWEATHER_API_KEY=0267c3aedd170c6d4813d125d65b3bb3
+OPENWEATHER_DEFAULT_CITY="São Paulo"
+
